--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   just_audio: ^0.9.18
   rive: ^0.13.20
   circular_countdown_timer: ^0.2.4
-
+  provider: ^6.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,7 +67,7 @@ flutter:
   assets:
     - assets/animation/
     - assets/images/
-    - assets/images/matching/
+    - assets/images/items/
     - assets/audios/
 
   # An image asset can refer to one or more resolution-specific "variants", see
