--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,8 @@ flutter:
   assets:
     - assets/animation/
     - assets/images/
-    - assets/images/items/
+    - assets/images/match/shadow/
+    - assets/images/match/split/
     - assets/images/yummy/
     - assets/images/memory/
     - assets/audios/
