feat: init feeding

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ flutter:
     - assets/animation/
     - assets/images/
     - assets/images/match/shadow/
-    - assets/images/yummy/
+    - assets/images/feeding/
     - assets/images/memory/
     - assets/audios/
 
