--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,17 +48,17 @@ android {
     }
 
     buildTypes {
-        // release {
-        //     // TODO: Add your own signing config for the release build.
-        //     // Signing with the debug keys for now, so `flutter run --release` works.
-        //     signingConfig = signingConfigs.debug
-        // }
         release {
-            signingConfig signingConfigs.release
-            shrinkResources true
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            // TODO: Add your own signing config for the release build.
+            // Signing with the debug keys for now, so `flutter run --release` works.
+            signingConfig = signingConfigs.debug
         }
+        // release {
+        //     signingConfig signingConfigs.release
+        //     shrinkResources true
+        //     minifyEnabled true
+        //     proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        // }
     }
 }
 
